; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_malloc.c__FREE.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_malloc.c__FREE.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_LAST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"_free TYPE\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_FREE(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @M_LAST, align 4
  %7 = icmp sge i32 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 @panic(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %2
  %11 = load i8*, i8** %3, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %10
  br label %17

14:                                               ; preds = %10
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @kfree_addr(i8* %15)
  br label %17

17:                                               ; preds = %14, %13
  ret void
}

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @kfree_addr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
